--- a/frontend/src/containers/css/ParkInModal.scss
+++ b/frontend/src/containers/css/ParkInModal.scss
@@ -19,7 +19,7 @@
       text-align: center;
       font-family: "Trebuchet MS", Tahoma, Arial, sans-serif;
       color: #333;
-      text-shadow: 0 1px 0 #fff;
+      // text-shadow: 0 1px 0 #fff;
       margin: 50px 0;
   }
   
